# bunq-hackathon-backend

./: .env.example  .gitignore  Justfile  README.md  docker-compose.yml  main.py  models_description.md  pyproject.toml  test_receipt_extraction.py
.claude/: settings.local.json
bunq-api/: pyproject.toml  seed_deposits.py
bunq-api/mockdata/: deposits.json  payments.json
bunq-api/src/bunq_api/: app.py  main.py  mainog.py
bunq-api/src/bunq_api/models/: split_session.py
bunq-api/src/bunq_api/routes/: monetary_accounts.py  payments.py  request_inquiries.py  users.py
django-backend/: requirements.txt
django-backend/accounts/: admin.py  authentication.py  models.py  serializers.py  server.py  urls.py  views.py
django-backend/backend/: settings.py  urls.py
django-backend/splits/: serializers.py  settings.py  urls.py  views.py
django-backend/splits/management/commands/: seed_data.py
mcp-client/: app.py  client.py  pyproject.toml
mcp-server/: alpaca_tools.py  custom_types.py  investment_log.py  investments.db  pyproject.toml  server.py
tests/: pyproject.toml  test_integration.py
