[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.89.0",
    "fastapi>=0.135.3",
    "mcp>=1.27.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
